그림판 기능/ 개체 선택 / 저장 구현

--- a/pictureboard/pictureboard.vcxproj
+++ b/pictureboard/pictureboard.vcxproj
@@ -208,6 +208,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\bitmap1.bmp" />
+    <Image Include="res\bitmap2.bmp" />
     <Image Include="res\pictureboard.ico" />
     <Image Include="res\toolbar1.bmp" />
     <Image Include="res\toolbar2.bmp" />
