--- a/pictureboard/pictureboard.vcxproj.filters
+++ b/pictureboard/pictureboard.vcxproj.filters
@@ -68,5 +68,8 @@
     <Image Include="res\toolbar2.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="res\bitmap2.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
