--- a/pictureboard/pictureboard.vcxproj.filters
+++ b/pictureboard/pictureboard.vcxproj.filters
@@ -77,5 +77,11 @@
     <Image Include="res\bitmap2.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="..\..\..\..\Downloads\eraser.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="..\..\..\..\Downloads\paint-palette.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
